<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">window</string>
  <string name="popup_window">显示 PopupWindow</string>
  <string name="dialog">显示 Dialog</string>
  <string name="free_form">自由窗口</string>
  <string name="add_view">WindowManager addView()</string>
  <string name="manage_status_bar">显示/隐藏状态栏</string>
  <string name="manage_navigation_bar">显示/隐藏导航栏</string>
  <string name="manage_ime">显示/隐藏软键盘</string>
  <string name="clear_system_ui_visibility" tools:ignore="ExtraTranslation">clear systemUiVisibility</string>
  <string name="full_screen1" tools:ignore="ExtraTranslation">systemUiVisibility = SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN</string>
  <string name="full_screen2" tools:ignore="ExtraTranslation">systemUiVisibility = SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN | SYSTEM_UI_FLAG_LAYOUT_STABLE</string>
  <string name="fitsSystemWindow" tools:ignore="ExtraTranslation">fisSystemWindow</string>
  <string name="recyclerView" tools:ignore="ExtraTranslation">fisSystemWindow recyclerView</string>
  <string name="coordinatorLayout" tools:ignore="ExtraTranslation">coordinatorLayout</string>
  <string name="statusBarHeight">获取状态栏高度</string>
  <string name="statusBarHeightIgnoreVisibility">获取状态栏高度（忽略是否显示）</string>
  <string name="status_bar_light">状态栏前景为暗色或亮色</string>
  <string name="navigation_bar_light">导航栏前景为暗色或亮色</string>
  <string name="dispatch_window_insets">dispatchWindowInsets</string>
</resources>