<?xml version="1.0" encoding="utf-8"?>
<com.flywith24.detail.CustomFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/showPopupWindow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_window"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/showDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/freeForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/free_form"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_view"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manageStatusBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_status_bar"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manageNavigationBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_navigation_bar"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manageIME"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_ime"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/statusBarLight"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/status_bar_light"
          android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/navigationBarLight"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/navigation_bar_light"
          android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearSystemUiVisibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_system_ui_visibility"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/systemUiVisibility1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_screen1"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/systemUiVisibility2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_screen2"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fitsSystemWindow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fitsSystemWindow"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/recyclerView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/recyclerView"
          android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/statusBarHeight"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/statusBarHeight"
          android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/statusBarHeightIgnoreVisibility"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/statusBarHeightIgnoreVisibility"
          android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/dispatchWindowInsets"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/dispatch_window_insets"
          android:textAllCaps="false" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</com.flywith24.detail.CustomFrameLayout>
